--- a/catalog/templates/catalog/catalog_list.html
+++ b/catalog/templates/catalog/catalog_list.html
@@ -12,7 +12,7 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/album/">
 
-    
+
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
@@ -106,7 +106,7 @@
       }
     </style>
 
-    
+
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -160,9 +160,9 @@
       </ul>
     </div>
 
-    
+
 <header data-bs-theme="dark">
-{% include 'includes/inc_menu.html' %}
+{% include 'catalog/includes/inc_menu.html' %}
 </header>
 
 <main>
@@ -187,8 +187,7 @@
     <p class="float-end mb-1">
       <a href="#">Back to top</a>
     </p>
-    <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-    <p class="mb-0">New to Bootstrap? <a href="/">Visit the homepage</a> or read our <a href="/docs/5.3/getting-started/introduction/">getting started guide</a>.</p>
+    <p class="mb-1">Мир цифровой техники 2024 &copy;</p>
   </div>
 </footer>
 <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
