--- a/catalog/templates/catalog/product_list.html
+++ b/catalog/templates/catalog/product_list.html
@@ -1,24 +1,25 @@
-{% extends 'home.html' %}
+{% extends 'catalog/catalog_list.html' %}
 {% load my_tags %}
 {% block content %}
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        {% for product in object_list %}
         <div class="col">
           <div class="card shadow-sm">
             <img src="{{ product.photo | media_filter}}">
             <div class="card-body">
               <p class="card-text">{{ product.name }}</p>
-              <p class="card-text">Описание: {{ product.description }}</p>
-              <p class="card-text">Цена: {{ product.price }}</p>
+              <p class="card-text">Описание: {{ product.description | slice:":100"  }}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <div class="btn-group">
-                  <a class="btn btn-primary" href="{% url 'catalog:product' %}" role="button">Назад</a>
+                  <a class="btn btn-primary" href="{% url 'catalog:product_detail' product.pk %}" role="button">Посмотреть</a>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        {% endfor %}
       </div>
     </div>
   </div>
