--- a/catalog/templates/contacts.html
+++ b/catalog/templates/contacts.html
@@ -1,4 +1,4 @@
-{% extends 'home.html' %}
+{% extends 'catalog/catalog_list.html' %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
     <h1 class="display-4">Контакты</h1>
