--- a/catalog/templates/catalog/includes/inc_menu.html
+++ b/catalog/templates/catalog/includes/inc_menu.html
@@ -10,6 +10,7 @@
           <ul class="list-unstyled">
             <li><a href="{% url 'catalog:product' %}" class="text-white">Главная</a></li>
             <li><a href="{% url 'catalog:contacts' %}" class="text-white">Контакты</a></li>
+            <li><a href="{% url 'blog:list' %}" class="text-white">Блог</a></li>
           </ul>
         </div>
       </div>
